[package]
name = "memoizee"
version = "0.2.0"
edition = "2021"

description = "Memoization for both sync and async function, with simple #[memoize] macro!"
license = "MIT"


[dependencies]
dashmap = "6.1.0"
tokio = { version = "1.42.0", features = ["full"] }
memoizee-macro = "0.2.0"
once_cell = "1.20.2"